# mazes

./: Cargo.toml  README.md
src/: main.rs  maze.rs
