[package]
name = "mazes"
version = "0.1.0"
authors = ["Cyrill Leutwiler <bigcyrill@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# https://github.com/bevyengine/bevy/blob/main/.cargo/config_fast_builds
# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]


[dependencies]
bevy = { version = "0.5" }
rand = "0.8"